[gd_scene load_steps=8 format=3 uid="uid://wpgjcykdyprm"]

[ext_resource type="Script" path="res://levels/shop/shop.gd" id="1_0i28i"]
[ext_resource type="PackedScene" uid="uid://j3xkeq7csnov" path="res://shop_control.tscn" id="3_0u4q0"]
[ext_resource type="PackedScene" uid="uid://cuoliggrvia3v" path="res://coins_counter_ui.tscn" id="3_jf25g"]
[ext_resource type="PackedScene" uid="uid://51hd8ou3eo0v" path="res://inventory/inventory_ui.tscn" id="4_dfe7e"]

[sub_resource type="Animation" id="Animation_02mqg"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionFade/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.0196078, 0.0196078, 0.0196078, 0), Color(0.0196078, 0.0196078, 0.0196078, 1), Color(0.0196078, 0.0196078, 0.0196078, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_level"
}]
}

[sub_resource type="Animation" id="Animation_60sfj"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionFade/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionFade/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4sh2g"]
_data = {
"fade_in": SubResource("Animation_02mqg"),
"fade_out": SubResource("Animation_60sfj")
}

[node name="Shop" type="CanvasLayer"]
script = ExtResource("1_0i28i")

[node name="TransitionFade" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4sh2g")
}

[node name="ColorRect" type="ColorRect" parent="TransitionFade"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0196078, 0.0196078, 0.0196078, 0)
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
offset_right = 480.0
offset_bottom = 270.0

[node name="CoinsUI" parent="." instance=ExtResource("3_jf25g")]
position = Vector2(369, 9)
scale = Vector2(1.5, 1.5)

[node name="Continue" type="Button" parent="."]
offset_left = 367.0
offset_top = 218.0
offset_right = 446.0
offset_bottom = 249.0
theme_override_font_sizes/font_size = 12
text = "Continue"

[node name="ShopControl" parent="." instance=ExtResource("3_0u4q0")]

[node name="Inventory_UI" parent="." instance=ExtResource("4_dfe7e")]
offset_left = 261.0
offset_top = 90.0
offset_right = -39.0
offset_bottom = -139.0

[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
